--- a/Project_Prog4/src/project_prog4/GebruikersFrame.form
+++ b/Project_Prog4/src/project_prog4/GebruikersFrame.form
@@ -36,9 +36,9 @@
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="txtWachtwoord" pref="124" max="32767" attributes="0"/>
-                          <Component id="txtGebruikersnaam" max="32767" attributes="0"/>
+                          <Component id="txtGebruikersnaam" pref="124" max="32767" attributes="0"/>
                           <Component id="txtID" alignment="0" max="32767" attributes="0"/>
+                          <Component id="txtWachtwoord" alignment="0" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <Component id="btnSave" alignment="1" max="32767" attributes="0"/>
@@ -133,11 +133,6 @@
         <Property name="text" type="java.lang.String" value="jTextField1"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="txtWachtwoord">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="jTextField2"/>
-      </Properties>
-    </Component>
     <Component class="javax.swing.JButton" name="btnSave">
       <Properties>
         <Property name="text" type="java.lang.String" value="Save"/>
@@ -164,6 +159,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="txtID">
       <Properties>
+        <Property name="editable" type="boolean" value="false"/>
         <Property name="text" type="java.lang.String" value="jTextField1"/>
       </Properties>
     </Component>
@@ -174,6 +170,11 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnBackActionPerformed"/>
       </Events>
+    </Component>
+    <Component class="javax.swing.JPasswordField" name="txtWachtwoord">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="jPasswordField1"/>
+      </Properties>
     </Component>
   </SubComponents>
 </Form>
